LPS-77373 Add display flex to SourceEditor to prevent content overflow

--- a/modules/apps/web-experience/fragment/fragment-web/src/main/resources/META-INF/resources/css/SourceEditor.scss
+++ b/modules/apps/web-experience/fragment/fragment-web/src/main/resources/META-INF/resources/css/SourceEditor.scss
@@ -3,6 +3,8 @@
 .source-editor {
 	border: solid 4px #EEE;
 	box-sizing: border-box;
+	display: flex;
+	flex-direction: column;
 	height: 40vh;
 	min-height: 20ch;
 	overflow: hidden;
